--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ section {
 	background-color: lightblue;
 	border-radius: 20px;
 	width: 200px;
-	height: 250px;
+	height: 300px;
 }
 
 button {
@@ -20,4 +20,8 @@ button {
 	border-radius: 10px;
 	padding: 6px 20px;
 	margin-top: 10px;
+}
+
+#message {
+	text-align: center
 }
