--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ section {
 	align-items: center;
 	background-color: lightblue;
 	border-radius: 20px;
-	width: 200px;
-	height: 300px;
+	width: 250px;
+	height: 325px;
 }
 
 button {
@@ -20,6 +20,10 @@ button {
 	border-radius: 10px;
 	padding: 6px 20px;
 	margin-top: 10px;
+}
+
+h3 {
+	margin: 10px
 }
 
 #message {
